* Wrote some nice Haddock module documentation for Parser.hs
* Added an explicit export list in order to hide the constructor for Parser

---

* Added another semantics to the Parser by adjoining it as a Pair.
  * The new semantics computes all the needed variable names without
    running the Parser
* Introduced spec tests

---

* Removed the Monad instance entirely and reimplemented the 
  Applicative instance directly
  * Now that we examine each side of `(<*>)` together we can 
    combine errors if both sides fail thus getting the behavior
    we were seeking.
* Suddenly, the tests all pass!

---

* Introduced the Env.Parser Applicative instance built atop the
  previous Monad interface.
* Reimplemented the Example.hs module using the Applicative instance
* Reimplemented the test cases using the Applicative instance
* Got rid of LANG GeneralizedNewtypeDeriving. We're not using it anymore.

---

* Changed the signature of Env.Parser to return a list of missing values
* Added a specification that the parser should return all of the missing values
  not just the first one. This spec fails, however.

---

* Implemented a version of Parser which fits this new interface. This required
  writing a custom monad implementation and using lookupEnv over getEnv.
  * Gets the tests to pass

* Created an explicit declaration of Env.parse so that we can attach 
  documentation to it.

---

* Changed the semantics of `Env.parse` to report errors purely instead of relying 
  on exceptions
  * Updated the Spec to account for this as well

---

* Added a monadic, QuickCheck-style test which checks that for any random 
  value stored in the environment at a random name we can recover that value.

---

* Added a few HUnit-style tests to tests/Spec.hs to indicate expected successes 
  and failures in parsing the environment.

  * Right now this uses the exception throwing failure mode which we'll have to
    eliminate later.

---
