@@ -36,6 +36,7 @@ cabal-version:       >=1.10
 library
   exposed-modules:
     System.Environment.Parser
+    System.Environment.Parser.Internal.FreeA
 
   build-depends:       base >=4.6 && <4.7
 
